--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,13 @@ Pos=60,60
 Size=108,204
 Collapsed=0
 
+[Window][main]
+Pos=60,60
+Size=144,297
+Collapsed=0
+
+[Window][Video Clip]
+Pos=689,93
+Size=135,65
+Collapsed=0
+
