ok_comment_showvideo

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,11 +10,16 @@ Collapsed=0
 
 [Window][main]
 Pos=60,60
-Size=144,297
+Size=401,348
 Collapsed=0
 
 [Window][Video Clip]
 Pos=689,93
 Size=135,65
+Collapsed=0
+
+[Window][CustomFootprint]
+Pos=50,20
+Size=382,328
 Collapsed=0
 
